# guardian_soccer_spider

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: image_build.yml
matchreports/: scrapy.cfg
matchreports/.scrapy/deltafetch/: default.db  guardian-match-reports.db
matchreports/matchreports/: items.py  middlewares.py  pipelines.py  settings.py
matchreports/matchreports/spiders/: guardian.py
src/: items.py  settings.py  spider.py
