
[tool.poetry]
name = "guadian_soccer_spider"
version = "0.1.0"
description = ""
authors = ["Martin Højland <hojland93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "21.0.1"
numpy = "^1.19.4"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"
boto3 = "^1.17.44"
Scrapy = "2.2.0"
pytz = "^2021.1"
itemloaders = "^1.0.4"
Scrapy-UserAgents = "^0.0.1"
cryptography = "2.8"
"zope.interface" = "5.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest-black = "^0.3.10"
pytest-cov = "^2.11.1"
mypy-boto3 = "^1.17.44.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml:cov.xml --black"

[tool.black]
line-length = 135
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''